tests/input/semantic_errors/incompatibleTypes4.c
#include <sfsqdfsqdf.h> //TODO this should work/is valid???
int main(){
    int x = 5;
    5 + &x;
    return 1;
}
